<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    >



    <TextView
        android:id="@+id/success_message_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:fontFamily="@font/muli_black"
        android:gravity="center"
        android:text="@string/password_updated"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="30sp" />


    <ImageView
        android:id="@+id/success_message_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:src="@drawable/password_updated_icon"
        app:tint="@color/colorPrimary" />


    <TextView
        android:id="@+id/success_message_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli"
        android:gravity="center"
        android:text="@string/password_updated_success_message"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <Button
        android:id="@+id/success_message_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@color/sec_primary"
        android:onClick="backToLogin"
        android:text="@string/login"
        android:textColor="@color/white" />


    </LinearLayout>