<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:isScrollContainer="true"
    android:transitionName="transition_login">

    <!--    <ImageView-->
    <!--        android:layout_marginEnd="-20dp"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="right"-->
    <!--        android:src="@drawable/ic_login_hero"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        tools:ignore="MissingConstraints" />-->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/wave"
        android:tint="#646568"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints,UseAppTint" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo_new_one" />


        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="0dp"-->
        <!--            android:fontFamily="@font/muli_black"-->
        <!--            android:text="@string/login"-->
        <!--            android:textAllCaps="true"-->
        <!--            android:textColor="@color/black"-->
        <!--            android:textSize="35sp" />-->


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/enter_email"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/primary"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/field_email_icon"
                app:startIconTint="@color/primary">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli_semibold"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etEmail"
                android:hint="@string/enter_password"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/field_password_icon"
                app:startIconTint="@color/primary">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli_semibold"
                    android:digits="abcd@#$123"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:id="@+id/forget_password_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etPassword"
                android:layout_marginTop="20dp">


                <Button
                    android:id="@+id/forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="#00000000"
                    android:text="@string/forget_password" />


            </RelativeLayout>


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forget_password_block"
                android:layout_marginTop="80dp"
                android:background="@color/primary"
                android:fontFamily="@font/muli_semibold"
                android:text="@string/login"
                android:textColor="@color/white" />


            <Button
                android:id="@+id/redirect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="#00000000"
                android:text="@string/signup_login"
                android:textColor="@color/primary" />


        </RelativeLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>